--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "with-stitches",
-  "version": "0.1.0",
+  "name": "with-chakra-ui-typescript",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@stitches/react": "0.0.1",
+    "@chakra-ui/icons": "^1.0.3",
+    "@chakra-ui/react": "^1.0.0",
+    "@chakra-ui/theme-tools": "1.0.0",
+    "@emotion/react": "11.1.1",
+    "@emotion/styled": "11.0.0",
+    "framer-motion": "^2.9.4",
     "next": "latest",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@types/react": "^16.9.43",
-    "typescript": "^3.9.7"
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "typescript": "4.0.5"
   },
   "license": "MIT"
 }
